-------------------------------------------------------------------------------

$Id$

vim: spelllang=en spell

-------------------------------------------------------------------------------

Changes since 1.4.0:

* Added a userspace library for accessing the application interface. This
  library is licensed under LGPLv2.
* Added VoE mailbox protocol support.
* Separated datagram initialization from filling the payload with zeros.
  Introduced new method ec_datagram_zero() for that.
* Added phy_read and phy_write commands to ethercat tool.
* Added driver for Intel PRO/100 NICs.
* Debug interfaces are created with the Ethernet addresses of the attached
  physical device.
* Improved error case return codes of many functions.
* Added 8139too driver for 2.6.25.
* Added 8139too driver for 2.6.26, thanks to M. Luescher.
* Added 8139too driver for 2.6.27, thanks to M. Goetze.
* Added e1000 driver for 2.6.26, thanks to M. Luescher.
* Implemented the File Access over EtherCAT (FoE) mailbox protocol, thanks to
  O. Zarges.
* Going to the Bootstrap state is now supported by the state machines and the
  command-line tool.
* Introduced ecrt_master_slave() to get information about a certain slave.
* SDO entry access rights are shown in 'ethercat sdos'.
* Added 64-bit data access macros to application header.

Changes in 1.4.0:

* Fixed race condition in jiffy-based frame timeout calculation.
* Fixed race condition concerning the ec_slave_config_state->operational flag.
* Fixed wrong calculation of the expected working counter if the process data
  of a domain span several datagrams.
* Fixed a kernel oops when a slave configuration is detached while the actual
  configuration is in progress.
* Fixed typo in logging output.
* Removed 'bashisms' from init script ('function' keyword).
* Fixed bug in e1000 drivers. Memory was allocated when sending the first
  frame.
* Modified licence headers to avoid conflicts with the GPL.
* Restricted licence to GPLv2 only.